--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,7 +9,9 @@ jobs:
         working-directory: ./scripts
     steps:
       - name: Check out the repository to the runner
-        uses: actions/checkout@v4  
+        uses: actions/checkout@v4
+      - name: Make the script files executable
+        run: chmod +x my-script.sh my-other-script.sh    
       - name: Run a script
         run: ./my-script.sh
       - name: Run another script
