--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -26,4 +26,12 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: output-log-file
-          path: output.log     
+          path: output.log
+  example-job-three:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download a single artifact
+        uses: actions/download-artifact@v4
+        with:
+          needs: example-job-two
+          name: output-log-file             
