--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,37 +1,17 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+name: build
+on: push
 jobs:
-  example-job:
+  job1:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./scripts
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - name: Check out the repository to the runner
-        uses: actions/checkout@v4
-      - name: Make the script files executable
-        run: chmod +x my-script.sh my-other-script.sh    
-      - name: Run a script
-        run: ./my-script.sh
-      - name: Run another script
-        run: ./my-other-script.sh
-  example-job-two:
+      - id: set-matrix
+        run: echo "matrix={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
+  job2:
+    needs: job1
     runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJSON(needs.job1.outputs.matrix) }}
     steps:
-      - shell: bash
-        run: |
-          expr 1 + 1 > output.log
-      - name: Upload output file
-        uses: actions/upload-artifact@v4
-        with:
-          name: output-log-file
-          path: output.log
-  example-job-three:
-    needs: example-job-two
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download a single artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: output-log-file             
+      - run: echo "Matrix - Project ${{ matrix.project }}, Config ${{ matrix.config }}"
