--- a/.github/workflows/github-actions-demo-4.yml
+++ b/.github/workflows/github-actions-demo-4.yml
@@ -6,10 +6,10 @@ env:
 
 jobs:
   display-variables:
-    name: 'Test'
+    name: ${{ vars.JOB_NAME }}
     # You can use configuration variables with the `vars` context for dynamic jobs
     if: ${{ vars.USE_VARIABLES == 'true' }}
-    runs-on: 'ubuntu-latest'
+    runs-on: ${{ vars.RUNNER }}
     environment: ${{ vars.ENVIRONMENT_STAGE }}
     steps:
     - name: Use variables
