--- a/.github/workflows/github-actions-demo-10.yml
+++ b/.github/workflows/github-actions-demo-10.yml
@@ -65,7 +65,7 @@ jobs:
       # This step uses the `run` command to execute a script that is stored in the repository at `script/rendered-content-link-checker.mjs` and passes all the parameters it needs to run.
       - name: Link check (warnings, changed files)
         run: |
-          ./script/my-other-script.sh \
+          ./scripts/my-other-script.sh \
             --language en \
             --max 100 \
             --check-anchors \
@@ -76,7 +76,7 @@ jobs:
       # This step also uses `run` command to execute a script that is stored in the repository at `script/rendered-content-link-checker.mjs` and passes a different set of parameters.
       - name: Link check (critical, all files)
         run: |
-          ./script/my-script.sh \
+          ./scripts/my-script.sh \
             --language en \
             --exit \
             --verbose \
